# KonaAI-SSMS-MCP

./: .gitignore  CONFIGURATION-UPDATE.md  README.md  package-lock.json
mcp-server/: .gitignore  CHANGELOG.md  CONNECTION_STATUS_SUMMARY.md  CURSOR_INTEGRATION_FIX.md  ENV_SETUP.md  QUICK_START.md  QUICK_START_CURSOR.md  README.md  README_START_HERE.md  SETUP_CHECKLIST.md  create_env.py  cursor_mcp_config.json  diagnose_connection.py  generate_cursor_config.py  launch_mcp.bat  main.py  mcp_config.json  pyproject.toml  quick_setup.py  requirements.txt  setup_cursor.py  setup_mcp.py  start_mcp.bat  test_connection.py  test_localhost_connection.py  test_mcp_startup.py  test_server_formats.py  validate_setup.py  verify_env.py
mcp-server/config/: database_config.py  env.example
mcp-server/docs/: ARCHITECTURE_AND_STRUCTURE.md  CURSOR_QUICK_REFERENCE.md  CURSOR_SETUP.md  README.md  SSMS_MCP_COMPLETE_GUIDE.md  __init__.py
mcp-server/server/: __init__.py  ssms_mcp_server.py
mcp-server/server/database/: base.py  datamgmt_db.py  master_db.py
mcp-server/server/resources/: procedures.py  tables.py
mcp-server/src/config/: app_config.py  database_config.py  env.example
mcp-server/src/server/: ssms_mcp_server.py
mcp-server/src/server/database/: __init__.py  base.py  datamgmt_db.py  master_db.py
mcp-server/src/server/resources/: __init__.py  procedures.py  tables.py  triggers.py  views.py
mcp-server/tests/: test_connection.py
mcp-server/tests/mcp/: README.md  run_all_tests.py  test_database_connections.py  test_mcp_resources.py  test_mcp_tools.py  verify_mcp_server.py
(+24 files in other folders)
