[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konaai-ssms-mcp"
version = "1.0.0"
description = "Python MCP Server for SQL Server Management Studio - KonaAI Database Access"
authors = [
    {name = "KonaAI Team", email = "team@konaai.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.9.0",
    "pyodbc>=5.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.scripts]
ssms-mcp = "src.main:main"

[project.urls]
Homepage = "https://github.com/konaai/ssms-mcp"
Repository = "https://github.com/konaai/ssms-mcp"
Issues = "https://github.com/konaai/ssms-mcp/issues"
